Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -1,6 +1,9 @@
 \chapter{Neutrino Physics}
 \label{chap:Neutrino Physics}
-\section{A Brief History of Neutrino Flavours}
+
+This chapter begins with a historical overview of neutrino flavour discoveries in \SectionRef{sec:history_of_neutrino_flavours}. Some of the key properties of neutrino physics are then discussed in \SectionRef{sec:neutrino_physics} along with the associated experiments. These include, helicity, chirality, the weak interaction and neutrino oscillations. Finally, some of the experimental results that point towards the possible existence of light sterile neutrinos are described in \SectionRef{subchap:Motivation for Sterile Neutrinos} along with possible mass generation mechanisms and neutrino oscillations with the inclusion of sterile neutrino states in \SectionRef{subchap:Theory of Sterile Neutrinos}.
+
+\section{A Brief History of Neutrino Flavours}\label{sec:history_of_neutrino_flavours}
 
 The neutrino was first postulated in 1930 by Pauli in an attempt to explain the continuous energy spectrum observed for the electrons from beta decay experiments~\cite{Pauli_letter}. At the time it was assumed that along with the nucleus, an electron was the only other product from beta decays. That is, beta decay was thought to be a two body decay of the form,
 \begin{equation}
@@ -16,7 +19,7 @@ Following the discovery of the tau lepton in 1975 by the SLAC National Accelerat
 
 The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are consistent with predictions from the \Gls{sm}. The number of expected neutrinos may be determined from the decay of the Z-boson since it's lifetime is dependent on the number of flavours. This was shown by the \gls{lep} experiment, which found the lifetime of the Z-boson to be consistent with a three neutrino model \cite{Zboson_number_of_neutrinos}\cite{LEP}. There have, however, been results from experiments which are inconsistent with the 3 neutrino framework. Namely the excess of events observed by the \gls{lsnd} and \gls{miniboone} experiments, the deficit of events observed by the \gls{sage} and \gls{gallex} detectors (dubbed the \textit{Gallium Anomaly}) and the deficit of events observed from nuclear reactors (dubbed the \textit{Reactor Anomaly}) \cite{LSND_excess} \cite{MiniBooNE_excess} \cite{GALLEX} \cite{Gallex_reanalysis} \cite{SAGE} \cite{Reactor_anomaly}. Additional neutrino flavours may exist and not contradict the statement on the lifetime of the Z-boson if they have a mass greater than half that of the Z-boson and/or they do not weakly interact and hence don't contribute to the decay rate of the Z-boson \cite{Zboson_number_of_neutrinos}. The hypothetical neutrinos which do not weakly interact are know as \textit{sterile} neutrinos in order to distinguish them from the \textit{active} ones that do. Sterile neutrinos will be discussed in greater detail in \SectionRef{subchap:Motivation for Sterile Neutrinos} and \SectionRef{subchap:Theory of Sterile Neutrinos}.
 
-\section{Overview of Neutrino Physics}
+\section{Overview of Neutrino Physics}\label{sec:neutrino_physics}
 
 Elementary particles are classified as either fermions or bosons depending on their spin. Fermions have odd half-integer spin whereas bosons have integer spin. Fermions are then sub-divided between leptons and quarks, with one of the defining differences being that quarks experience the strong force along with the other three fundamental forces whereas the leptons only experience gravity, the weak and the electromagnetic forces. Within the \gls{sm}, bosons are subdivided into vector bosons which have a spin of one and scalar bosons which have a spin of zero \cite{Particles_and_Fundamental_Interactions:_An_Introduction_to_Particle_Physics}. The classification of elementary particles is shown in the flow chart in \FigureRef{fig:particle_classifications}.
 
@@ -365,6 +368,17 @@ Another key feature of \EquationRef{eqn:matter_mixing_angle} is that the matter 
 \newpage
 \section{Experimental Evidence for Sterile Neutrinos}\label{subchap:Motivation for Sterile Neutrinos}
 
+\textcolor{red}{Other crap}
+Cosmology: $N_{eff} = (3.046 + \Delta N_{eff})$
+For any thermalised sterile neutrinos, $\Delta N_{eff} = 1, 2, 3 ...$
+Measurements have $\Delta N_{eff} \sim 0$. 
+So sterile neutrinos not thermalised.? Or at least suppressed
+SBL steriles imply full thermalisation (why??) - so tension...
+https://s3.cern.ch/inspire-prod-files-c/
+c6eedeb5b3b604ca58f1a237e1b36f30
+https://arxiv.org/pdf/1904.07108.pdf page 16
+https://journals.aps.org/prd/pdf/10.1103/PhysRevD.104.123524
+
 There have been a number of experimental results which are not consistent with oscillations in a three neutrino model. Most of these anomalous results can be explained by oscillations with one or more eV scale neutrinos pointing towards the existence of at least one light sterile neutrino. The experiments which have seen results seemingly in favour of eV scale sterile neutrinos will be discussed in the upcoming sections. There are however tensions between the results in favour of additional neutrino flavours and the null results from experiments such as \gls{karmen} and \gls{minos} \cite{Where_are_we_with_light_sterile_neutrinos}. The  \gls{karmen}  experiment  was  sensitive  to $\numu \rightarrow \nue$  and  $\numubar \rightarrow \nuebar$ over a baseline of 17.6 m.  No evidence of oscillations were found and a 90\% confidence level exclusion limit was placed on $\Delta m^2 > 100$ $eV^2$ with $\sin^2{2\theta} < 4\times 10^{-2}$ and $\sin^2{2\theta} < 8.5 \times 10^{-3}$ for neutrinos and anti-neutrinos respectively \cite{KARMEN}.  The \gls{minos} experiment used a predominantly muon-neutrino beam with a peak energy of 3 GeV with the near detector being at a baseline of 1.04 km.  Again, no evidence of oscillations was observed.  For a mass splitting of $\Delta m^2_{42} = 0.5$ eV$^2$, the value of $\sin^2{2\theta_{24}}$ was constrained to be less than 0.016 for a 90\% confidence level \cite{MINOS}.
 
 \subsection{LSND}
@@ -396,7 +410,7 @@ The \textit{Reactor Anomaly} refers to the apparent deficit of anti-electron neu
 
 \section{Theory of Sterile Neutrinos}\label{subchap:Theory of Sterile Neutrinos}
 
-Assuming that the mass generation of neutrinos follows similar rules to that of other Dirac mass terms, there is motivation to try and attempt to include sterile neutrinos into theoretical models since right handed fields are required. Some of the potential options for neutrinos mass generation are discussed in \SectionRef{subsec:Neutrino Mass}. The initial mass scale for sterile neutrinos is unconstrained, however one of the more well motivated models is the "Type 1" \textit{Seesaw model} which attempts to explain the relative size of neutrino masses points towards very heave sterile neutrino masses ($\gg ~1$ eV). Variations of the Seesaw model have also been proposed that incorporate light sterile neutrinos \cite{White_Paper}.
+Assuming that the mass generation of neutrinos follows similar rules to that of other Dirac mass terms, there is motivation to try and attempt to include sterile neutrinos into theoretical models since right handed fields are required. Some of the potential options for neutrino mass generation are discussed in \SectionRef{subsec:Neutrino Mass}. The initial mass scale for sterile neutrinos is unconstrained, however one of the more well motivated models is the "Type 1" \textit{seesaw model} which attempts to explain the relative size of neutrino masses and points towards very heavy sterile neutrino masses ($\gg ~1$ eV). Variations of the Seesaw model have also been proposed that incorporate light sterile neutrinos \cite{White_Paper}.
 
 \subsection{Neutrino Mass}\label{subsec:Neutrino Mass}
 The \gls{sm} Lagrangian, $\mathcal{L}$, for a fermion is given by
@@ -423,7 +437,7 @@ In order for the mass terms to actually acquire mass, the \gls{sm} requires two 
 \begin{equation}
     {m_D}_i = \frac{y_iv}{\sqrt{2}},
 \end{equation}
-where \textit{y} is the Yukawa coupling and \textit{v} gives the vacuum expectation value from the Higgs field ($v \simeq$ 246 GeV). A concern with generating neutrino masses in this way is the required size of the Yukawa coupling. To generate a mass of say 0.1 eV, the Yukawa coupling would need to be very small ($\sim$~6 orders of magnitude less than that of the electron). This small number is sometimes considered unnatural and provides motivation to search for alternative mass mechanisms to explain the neutrino masses \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}.
+where \textit{y} is the Yukawa coupling and \textit{v} gives the vacuum expectation value from the Higgs field ($v \simeq$ 246 GeV). A concern with generating neutrino masses in this way is the required size of the Yukawa coupling. To generate a mass of say 0.1 eV, the Yukawa coupling would need to be very small ($\sim$6 orders of magnitude less than that of the electron). This small number is sometimes considered unnatural and provides motivation to search for alternative mass mechanisms to explain the neutrino masses \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}.
 
 \subsubsection{Majorana Mass}
 To generate mass without the requirement of a right handed field, it is required that the neutrino be a Majorana particle. It may be shown that 
@@ -459,7 +473,7 @@ where the central $4 \times 4$ matrix is known as the mass matrix, $\mathcal{M}$
     m_2 \simeq m_R.
 \end{split}
 \end{equation}
-Since $m_R \gg m_D$, $m_2$ is also large and $m_1$ is small since the value of $m_D^2$ is suppressed by the large value of $m_R$ in the denominator. Furthermore, the larger the value of $m_2$, the smaller the value of $m_1$. This linked relationship gives rise to the so-called Type I \footnote{A number of other seesaw mechanisms exist which typically involve the exchange of a particle \cite{White_Paper}} \textit{seesaw mechanism}. $m_1$ would give the mass scale of the active neutrinos whereas $m_2$ would be a heavy sterile neutrino. This mechanism requires neutrinos to be Majorana particles, but does provide an explanation on the relative smallness of the neutrino masses compared with other \gls{sm} particles \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
+Since $m_R \gg m_D$, $m_2$ is also large and $m_1$ is small since the value of $m_D^2$ is suppressed by the large value of $m_R$ in the denominator. Furthermore, the larger the value of $m_2$, the smaller the value of $m_1$. This linked relationship gives rise to the so-called Type I \footnote{A number of other seesaw mechanisms exist which typically involve the exchange of a particle such as a heavy Majorana neutrino as is the case in the Type I mechanism \cite{White_Paper}.} \textit{seesaw mechanism}. $m_1$ would give the mass scale of the active neutrinos whereas $m_2$ would be a heavy sterile neutrino. This mechanism requires neutrinos to be Majorana particles, but can be extended to include three active neutrinos and arbitrary number of sterile neutrinos and does provide an explanation on the relative smallness of the neutrino masses compared with other \gls{sm} particles \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
 
 
 \subsection{Sterile Neutrino Oscillations}\label{sec:sterile_neutrino_oscillations}
@@ -475,7 +489,7 @@ U_{s1} & U_{s2} & U_{s3} & U_{s4} & \dots \\
 \vdots & \vdots & \vdots & \vdots & \ddots \\
 \end{pmatrix}.
 \end{equation}
-For simplicity, often only the case with one sterile neutrino is considered. This is known as the $(3 + 1)$ neutrino framework where takes into account the three usual active neutrinos with the addition of one sterile neutrino. Within a $(3 + 1)$ framework and assuming that $\Delta m^2_{41} \gg |\Delta m^2_{31}|, \Delta m^2_{21}$, short baseline oscillation are well represented by the two flavour oscillation probability,
+For simplicity, often only the case with one sterile neutrino is considered. This is known as the $(3 + 1)$ neutrino framework which takes into account the three usual active neutrinos with the addition of one sterile neutrino. Within a $(3 + 1)$ framework and assuming that $\Delta m^2_{41} \gg |\Delta m^2_{31}|, \Delta m^2_{21}$, short baseline oscillation are well represented by the two flavour oscillation probability,
 
 \begin{equation}
     P_{\nu_\alpha \rightarrow \nu_\beta} = \Kronecker_{\alpha \beta} -4|U_{\alpha \beta}|^2 (\Kronecker_{\alpha \beta} -|U_{\alpha \beta}|^2)\sin^2{\left(\frac{\Delta m^2_{41}L}{4E} \right)},
