--- a/glossary.tex
+++ b/glossary.tex
@@ -2,6 +2,7 @@
 %  name={domain knowledge},%
 %  description={valid knowledge used to refer to an area of human endeavour, an autonomous computer activity, or other specialized discipline}}
 
+\newacronym{2p2h}{2p2h}{2 Particles 2 Holes}
 \newacronym{adc}{ADC}{Analog Digital Converter}
 \newacronym{apa}{APA}{Andode Plane Assembly}
 \newacronym{arapuca}{ARAPUCA}{Argon R\&D Advanced Program at UniCAmp}
@@ -60,7 +61,6 @@
 \newacronym{tpb}{TPB}{Tetraphenyl Butadiene}
 \newacronym{tpc}{TPC}{Time Projection Chamber}
 \newacronym{t2k}{T2K}{Tokai to Kamioka}
-\newacronym{valor}{VALOR}{VALencia-Oxford-Rutherford}
 \newacronym{vuv}{VUV}{Vacuum Ultra Violet}
 
 
