--- a/mythesis.bib
+++ b/mythesis.bib
@@ -715,6 +715,29 @@ month = {7}
     Series = "BestMaster"
 }
 
+@article{microboone_electron_lifetime,
+    collaboration = "MicroBooNE",
+    title = "{A Measurement of the Attenuation of Drifting Electrons in the MicroBooNE LArTPC}",
+    doi = "10.2172/1573054",
+    month = "8",
+    year = "2017"
+}
+
+@article{electron_drift_velocity,
+title = {Drift velocity of free electrons in liquid argon},
+journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+volume = {449},
+number = {1},
+pages = {288-294},
+year = {2000},
+issn = {0168-9002},
+doi = {https://doi.org/10.1016/S0168-9002(99)01301-7},
+url = {https://www.sciencedirect.com/science/article/pii/S0168900299013017},
+author = {W. Walkowiak},
+keywords = {Liquid argon, Electron drift velocity, Calorimetry},
+abstract = {A measurement of the drift velocity of free electrons in liquid argon has been performed. Free electrons have been produced by photoelectric effect using laser light in a so-called “laser chamber”. The results on the drift velocity vd are given as a function of the electric field strength in the range 0.5kV/cm⩽|E|⩽12.6kV/cm and the temperature in the range 87K⩽T⩽94K. A global parametrization of vd(|E|,T) has been fitted to the data. A temperature dependence of the electron drift velocity is observed, with a mean value of Δvd/(ΔTvd)=(−1.72±0.08)%/K in the range of 87–94 K.}
+}
+
 @article{PDG_2022,
     author = "Workman, R. L. and Others",
     collaboration = "Particle Data Group",
@@ -1296,6 +1319,38 @@ howpublished = {\href{https://docs.dunescience.org/cgi-bin/private/ShowDocument?
           year = "2010"
 }
 
+@article{GENIE_V3_Paper,
+    author = "Alvarez-Ruso, Luis and others",
+    collaboration = "GENIE",
+    title = "{Recent highlights from GENIE v3}",
+    eprint = "2106.09381",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "FERMILAB-PUB-21-266-SCD-T",
+    doi = "10.1140/epjs/s11734-021-00295-7",
+    journal = "Eur. Phys. J. ST",
+    volume = "230",
+    number = "24",
+    pages = "4449--4467",
+    year = "2021"
+}
+
+@article{GENIE_tune,
+    author = "Tena-Vidal, J\'ulia and others",
+    collaboration = "GENIE",
+    title = "{Neutrino-nucleon cross-section model tuning in GENIE v3}",
+    eprint = "2104.09179",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "FERMILAB-PUB-20-531-SCD-T",
+    doi = "10.1103/PhysRevD.104.072009",
+    journal = "Phys. Rev. D",
+    volume = "104",
+    number = "7",
+    pages = "072009",
+    year = "2021"
+}
+
 @misc{Geant4_website,
    title="{GEANT4 A Simulation Toolkit}",
    howpublished = "{\href{https://geant4.web.cern.ch/}{https://geant4.web.cern.ch/}}",
@@ -1356,4 +1411,17 @@ abstract = {Geant4 is a toolkit for simulating the passage of particles through 
     keywords = {Liquid Argon, Neutrino, Sterile Neutrino, SBN, SBND, Oscillation},
     url = {https://livrepository.liverpool.ac.uk/id/eprint/3143192},
     doi = {10.17638/03143192}
+}
+
+@article{Asimov_dataset,
+	doi = {10.1140/epjc/s10052-011-1554-0},
+	url = {https://doi.org/10.1140%2Fepjc%2Fs10052-011-1554-0},
+	year = 2011,
+	month = {feb},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {71},
+	number = {2},
+	author = {Glen Cowan and Kyle Cranmer and Eilam Gross and Ofer Vitells},
+	title = {Asymptotic formulae for likelihood-based tests of new physics},
+	journal = {The European Physical Journal C}
 }
